aau/sf_autobackup/objects/Mobile_Post__c.object
<CustomObject>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location Linked to a Building on the AAU Transit System</description>
        <inlineHelpText>Location Linked to a Building on the AAU Transit System</inlineHelpText>
        <label>Location Stop</label>
        <referenceTo>Bus_Stop__c</referenceTo>
        <relationshipLabel>Mobile Posts</relationshipLabel>
        <relationshipName>Mobile_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of the Post/Event</description>
        <inlineHelpText>Category of the Post/Event</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Campus Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Events</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Post/Event</description>
        <inlineHelpText>Description of the Post/Event</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_End__c</fullName>
        <description>End Time of the Post/Event</description>
        <inlineHelpText>End Time of the Post/Event</inlineHelpText>
        <label>Event End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start__c</fullName>
        <description>Start Time of the Post/Event</description>
        <inlineHelpText>Start Time of the Post/Event</inlineHelpText>
        <label>Event Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_Text__c</fullName>
        <defaultValue>&apos;More Info&apos;</defaultValue>
        <description>The text that will be displayed in the hyperlink for the field &quot;Link__c&quot; in the event detail</description>
        <inlineHelpText>The text that will be displayed in the hyperlink for the field &quot;Link__c&quot; in the event detail</inlineHelpText>
        <label>Link Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link to site with more information</description>
        <inlineHelpText>Link to site with more information</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness Series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the Post/Event</description>
        <inlineHelpText>Title of the Post/Event</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mobile Post</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Event_Start__c</columns>
        <columns>Event_End__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Future</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Event_Start__c</columns>
        <columns>Event_End__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Future</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Mobile Post Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>